--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Welcome to sayed.engineer</title>
+  <title>Welcome to Farook.sayed.engineer</title>
 </head>
 <body>
   <h1>Hello from Farook</h1>
